alteracoes no front

--- a/frontend/crud.html
+++ b/frontend/crud.html
@@ -76,11 +76,11 @@
           <form>
             <div class="mb-2 container col-10">
               <label for="FormControlName" class="form-label">Nome do colaborador</label>
-              <input type="text" class="form-control" id="FormControlName"  placeholder="Ex: Paulo Silva">
+              <input type="text" class="form-control" id="FormControlName"  placeholder="Ex:Ana Cubits">
             </div>
             <div class="mb-2 container col-10">
               <label for="FormControlCpf" class="form-label">CPF do colaborador</label>
-              <input type="text" class="form-control" id="FormControlCpf" placeholder="Ex: 12345678978">
+              <input type="text" class="form-control" id="FormControlCpf" placeholder="Ex: 12345678910">
             </div>
 
             <div class="coffee container g-3 col-10">
@@ -89,7 +89,7 @@
               </div>
               <div class="mb-1 col-11">
                 <label for="FormControlDescricao" class="form-label">Descricao do café</label>
-                <input type="text" class="form-control" id="FormControlDescricao" placeholder="Ex: Bolo Laranja">
+                <input type="text" class="form-control" id="FormControlDescricao" placeholder="Ex: Torta">
               </div>
               <button type="button" class="btn btn-primary" onclick="addCafeList()">Adicionar</button>
             </div>
