--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="container-header">
-        <h1>CAFÉ & CIA</h1>
+        <h1>CAFÉ APP</h1>
         <button><a href="./crud.html">Gerenciar</a></button>
     </header>
 
